# Template-Python-Projekt

./: .editorconfig  .gitignore  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: .commit-instructions.md  ISSUE-33.md  copilot-instructions.md
.github/issues/: issue-2.md  issue-6.md  issue-7.md  issue-8.md  issue-9.md
.github/pr_bodies/: sub6.md  sub7.md
.github/prompts/: issue-4-to-main-pr-body.md  plan-automatisiertesStarterskript.prompt.md  plan-contribGuide.prompt.md  plan-docsExamples.prompt.md  plan-issue32FaqTroubleshooting.prompt.md  plan-issue35MakeCheck.prompt.md  plan-migrationAndUpdates.prompt.md  plan-parentIssueFive.prompt.md  plan-projectTemplates#2.prompt.md  plan-projectTemplates#3.prompt.md  untitled-planIssue30.prompt.md  untitled-planManualInitialization.prompt.md
.github/workflows/: ci.yml
docs/: .issue-30-scope.md  .issue-30-test-results.md  README.md  cli_spec.md  manual_initialization.md  migration_and_updates.md  quickstart.md  troubleshooting.md
project_templates/cli-basic/docs/: README.md  README.md.jinja  index.md.jinja  migration_example.md.jinja
project_templates/cli-basic/src/: __init__.py  main.py
project_templates/cli-basic/src/controller/: __init__.py
project_templates/cli-basic/src/model/: __init__.py
project_templates/cli-basic/src/view/: __init__.py
project_templates/common/: .editorconfig.jinja  .gitignore.jinja  .markdownlint.json.jinja  .pre-commit-config.yaml.jinja  CHANGELOG.md.jinja  PLACEHOLDER_SPEC.md.jinja  README.md.jinja  commit-instructions.md  copilot-instructions.md  package.json.jinja  poetry.toml.jinja  pre-commit-config.yaml.jinja  pyproject.toml.jinja
project_templates/common/.github/: PULL_REQUEST_TEMPLATE.md
project_templates/common/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
project_templates/common/migration_examples/: pyproject_migration.md.jinja
project_templates/ui-pyside6/: README.md.jinja
project_templates/ui-pyside6/src/: __init__.py  main.py
project_templates/ui-pyside6/src/controller/: __init__.py
project_templates/ui-pyside6/src/model/: __init__.py
project_templates/ui-pyside6/src/view/: __init__.py
scripts/: __init__.py  check.ps1  check.sh  validate_templates.py
src/template_python_projekt/: main.py  node_env.py  poetry_env.py  render.py
tests/: test_docs_render.py  test_editorconfig_gitignore.py  test_markdownlint_template.py  test_migration_docs.py  test_node_env.py  test_placeholder_spec.py  test_poetry_env.py  test_poetry_template.py  test_precommit_template.py  test_pyproject_merge.py  test_pyproject_template.py  test_readme_changelog_template.py  test_render_directory.py  test_render_update_mode.py  test_template_cli_basic.py  test_template_renderer.py  test_troubleshooting_doc.py  test_validate_templates.py  test_vscode_templates.py
