[project]
name = "template-python-projekt"
version = "0.1.0"
description = "Template Projekt für neue Python CLI / UI Projekte um den Start zuer erleichtern"
authors = [{ name = "Eichi76", email = "eichi76@gmx.net" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.urls]
repository = "https://github.com/Eichi76/Template-Python-Projekt"
"Bug Tracker" = "https://github.com/Eichi76/Template-Python-Projekt/issues"


[tool.poetry]
packages = [{ include = "template_python_projekt", from = "src" }]

[dependency-groups]
test = [
    "coverage (>=7.13.4,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "codecov-cli (>=11.2.6,<12.0.0)",
]
lint = ["ruff (>=0.15.4,<0.16.0)", "isort (>=8.0.1,<9.0.0)"]
typechecker = ["mypy (>=1.19.1,<2.0.0)", "mypy-extensions (>=1.1.0,<2.0.0)"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typechecker" },
    "pre-commit (>=4.5.1,<5.0.0)",
]

[tool.isort]
py_version = "312"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
split_on_trailing_comma = true
lines_after_imports = 2
force_single_line = true
skip_glob = ["docs/*", "setup.py"]
filter_files = true

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
extend-exclude = ["docs", "test", "tests"]

[tool.ruff.lint]
select = ["F", "E"]
extend-select = ["ALL"]
ignore = ["D", "CPY", "T20", "DOC", "PGH"]
fixable = ["ALL"]
unfixable = []
preview = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = []
known-local-folder = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-locals = 15
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = false
docstring-code-format = true

[tool.mypy]
# Platform configuration
python_version = "3.12"
# imports related
ignore_missing_imports = true
follow_imports = "silent"
# Configuring warnings
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Untyped definitions and calls
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Disallow dynamic typing
disallow_subclassing_any = true
# Miscellaneous strictness flags
strict_equality = true
# Configuring error messages
exclude = ["docs", "test", "tests", "project_templates/.*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
